# ecosystem

./: Cargo.toml  README.md  build.rs
configuration/: base.yaml  local.yaml  production.yaml
proto/: ecosystem.proto  observer.proto
scripts/: run_test.sh
src/: configuration.rs  food_consumer.rs  food_producer.rs  main.rs  state.rs
