[package]
name = "ecosystem"
version = "0.1.0"
authors = ["dougfort <doug.fort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = "0.11"
tonic = "0.4"
prost = "0.7"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
lazy_static = "1.4.0"

[lib]
name = "configuration"
path = "src/configuration.rs"

[[bin]]
name = "observer"
path = "src/bin/observer/main.rs"

[build-dependencies]
tonic-build = "0.4"
